# SPIRV-Tools

./: .appveyor.yml  .bazelrc  .clang-format  .gitignore  .gitmodules  .gn  .travis.yml  Android.mk  BUILD.bazel  BUILD.gn  CHANGES  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPS  LICENSE  MODULE.bazel  PRESUBMIT.py  README.md  REUSE.toml  WORKSPACE  android_ci_build.bash  appveyor.yml  build.sh  build_defs.bzl  build_host.sh  codereview.settings  docker-compose.yml  gta_frag.opt.spv  gta_frag.opt.spv.txt  gta_frag.opt2.spv  gta_frag.opt2.spv.txt  gta_frag.spv  gta_frag.spv.txt  gta_vertex.opt.spv  gta_vertex.opt.spv.txt  gtav.spv  gtav.spv.txt  gtav_lowered.spv  gtav_lowered.spv.txt  (+18 more)
examples/cpp-interface/: CMakeLists.txt  main.cpp
source/: CMakeLists.txt  assembly_grammar.cpp  assembly_grammar.h  binary.cpp  binary.h  capability_set.cpp  capability_set.h  cfa.h  common_debug_info.h  core_syntax_table.patch  diagnostic.cpp  diagnostic.h  disassemble.cpp  disassemble.h  endian.cpp  endian.h  enum_set.cpp  enum_set.h  enum_string_mapping.cpp  enum_string_mapping.h  ext_inst.cpp  ext_inst.h  extensions.cpp  extensions.h  extinst.amd-gcn-shader.grammar.json  extinst.glsl.std.450.grammar.json  extinst.opencl.debuginfo.100.grammar.json  extinst.opencl.debuginfo.100.json  grammar.json  id_descriptor.cpp  id_descriptor.h  instruction.cpp  instruction.h  instructions.cpp  instructions.cpp.inc  latest_spirv.h  latest_version_glsl_std_450_header.h  latest_version_opencl_std_header.h  latest_version_spirv_header.h  libspirv.cpp  (+75 more)
source/comp/: CMakeLists.txt  bit_stream.h  markv.cpp  markv.h  markv_autogen.cpp  markv_autogen.h  markv_autogen.inc  markv_codec.cpp  markv_codec.h  markv_decoder.cpp  markv_decoder.h  markv_encoder.cpp  markv_encoder.h  markv_logger.h  markv_model.h
source/diff/: CMakeLists.txt  diff.cpp
source/fuzz/: CMakeLists.txt  added_function_reducer.cpp  added_function_reducer.h  available_instructions.cpp  available_instructions.h  call_graph.cpp  call_graph.h  comparator_deep_blocks_first.h  compare_blocks_deep_first.h  data_descriptor.h  decision_maker.cpp  decision_maker.h  equivalence_relation.h  fact_manager.cpp  fact_manager.h  force_render_red.cpp  fuzzer.cpp  fuzzer.h  fuzzer_context.cpp  fuzzer_context.h  fuzzer_context_wgsl.cpp  fuzzer_context_wgsl.h  fuzzer_pass.cpp  fuzzer_pass.h  fuzzer_pass_add_access_chains.cpp  fuzzer_pass_add_access_chains.h  fuzzer_pass_add_bit_instruction_synonyms.cpp  fuzzer_pass_add_composite_extract.cpp  fuzzer_pass_add_composite_inserts.cpp  fuzzer_pass_add_composite_inserts.h  fuzzer_pass_add_composite_types.cpp  fuzzer_pass_add_composite_types.h  fuzzer_pass_add_copy_memory.cpp  fuzzer_pass_add_copy_memory.h  fuzzer_pass_add_copy_memory_instructions.cpp  fuzzer_pass_add_copy_memory_instructions.h  fuzzer_pass_add_dead_blocks.cpp  fuzzer_pass_add_dead_blocks.h  fuzzer_pass_add_dead_breaks.cpp  fuzzer_pass_add_dead_breaks.h  (+389 more)
source/link/: CMakeLists.txt  fnvar.cpp  fnvar.h  linker.cpp
source/lint/: CMakeLists.txt  divergence_analysis.cpp  divergence_analysis.h  lint_divergent_derivatives.cpp  lint_uninitialized_variables.cpp  linter.cpp  lints.h  uninitialized_analysis.h  variable_state.cpp  variable_state.h
source/opt/: CMakeLists.txt  add_var_for_funccall_param.cpp  add_var_for_funccall_param.h  aggressive_dead_code_elim_pass.cpp  aggressive_dead_code_elim_pass.h  allocator.cpp  allocator.h  amd_ext_to_khr.cpp  amd_ext_to_khr.h  analyze_live_input_pass.cpp  basic_block.cpp  basic_block.h  block_merge_pass.cpp  block_merge_pass.h  block_merge_util.cpp  block_merge_util.h  build_module.cpp  build_module.h  canonicalize_ids_pass.cpp  ccp_pass.cpp  ccp_pass.h  cfg.cpp  cfg.h  cfg_cleanup_pass.cpp  cfg_cleanup_pass.h  code_sink.cpp  code_sink.h  combine_access_chains.cpp  combine_access_chains.h  common_uniform_elim_pass.cpp  common_uniform_elim_pass.h  compact_ids_pass.cpp  compact_ids_pass.h  composite.cpp  composite.h  const_folding_rules.cpp  const_folding_rules.h  constants.cpp  constants.h  constructs.cpp  (+280 more)
source/reduce/: CMakeLists.txt  change_operand_reduction_opportunity.cpp  change_operand_reduction_opportunity.h  change_operand_to_undef_reduction_opportunity.cpp  change_operand_to_undef_reduction_opportunity.h  conditional_branch_to_simple_conditional_branch_opportunity_finder.cpp  cut_loop_reduction_opportunity.cpp  cut_loop_reduction_opportunity.h  cut_loop_reduction_pass.cpp  cut_loop_reduction_pass.h  merge_blocks_reduction_opportunity.cpp  merge_blocks_reduction_opportunity.h  merge_blocks_reduction_opportunity_finder.cpp  merge_blocks_reduction_opportunity_finder.h  operand_to_const_reduction_opportunity_finder.cpp  operand_to_const_reduction_opportunity_finder.h  operand_to_const_reduction_pass.cpp  operand_to_const_reduction_pass.h  operand_to_dominating_id_reduction_opportunity_finder.cpp  operand_to_dominating_id_reduction_opportunity_finder.h  operand_to_dominating_id_reduction_pass.cpp  operand_to_dominating_id_reduction_pass.h  operand_to_undef_reduction_opportunity_finder.cpp  operand_to_undef_reduction_opportunity_finder.h  operand_to_undef_reduction_pass.cpp  operand_to_undef_reduction_pass.h  pch_source_reduce.cpp  pch_source_reduce.h  reducer.cpp  reducer.h  reduction_opportunity.cpp  reduction_opportunity.h  (+42 more)
test/: AssemblyContext.cpp  AssemblyFormat.cpp  BinaryDestroy.cpp  BinaryEndianness.cpp  BinaryHeaderGet.cpp  BinaryParse.cpp  BinaryToText.Literal.cpp  BinaryToText.cpp  CMakeLists.txt  CapabilitySet.cpp  Comment.cpp  DiagnosticDestroy.cpp  DiagnosticPrint.cpp  DiagnosticStream.cpp  ExtInst.OpenCL.std.cpp  ExtInstGLSLstd450.cpp  FixWord.cpp  GeneratorMagicNumber.cpp  HexFloat.cpp  ImmediateInt.cpp  LibspirvMacros.cpp  NameMapper.cpp  NamedId.cpp  OpcodeIsVariable.cpp  OpcodeMake.cpp  OpcodeRequiresCapabilities.cpp  OpcodeSplit.cpp  OpcodeTableGet.cpp  Operand.cpp  OperandCapabilities.cpp  OperandPattern.cpp  OperandTableGet.cpp  ParseNumber.cpp  SoftwareVersion.cpp  TargetEnv.cpp  TestFixture.h  TextAdvance.cpp  TextDestroy.cpp  TextLiteral.cpp  TextStartsNewInst.cpp  (+96 more)
tools/: io.h  (+2 more)
(+855 files in other folders)
