bazel_dep(name = "bazel_skylib", version = "1.5.0")

bazel_dep(name = "googletest", dev_dependency = True)
local_path_override(
    module_name = "googletest",
    path = "external/googletest",
)

bazel_dep(name = "effcee", dev_dependency = True)
local_path_override(
    module_name = "effcee",
    path = "external/effcee",
)
